# THTK-Studio-2

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  editor-shell-status.md  package-lock.json  package.json  project.md  uno.config..js  vite.config.js
.claude/: settings.local.json
docs/: README.md  backend-guidelines.md  ecl-highlighting-plan.md  ecl-patterns-and-organization-cn.md  ecl-signature-inference.md  ecl-syntax-cheatsheet-cn.md  ecl-tutorial-overview-cn.md  frontend-guidelines.md  review-notes.md  sht-format-research.md  sht-webedit-and-shmupcc-analysis.md  thecl-integration.md  toolchain-platform.md
docs/ecl-tutorial-source/: README.md  manifest.json
research/: CLAUDE.md  README.md
research/anm/: README.md
research/bullets/: 01-core-engine.md  02-bullet-vm-model.md  03-lasers.md  README.md
research/ecl/: .gitignore  00-thecl-format-reference.md  01-ecl-context-and-variables.md  02-runtime-vm.md  03-thredata-crosscheck.md  04-ecl-vm-interpreter.md  05-fire-interface.md  06-adding-custom-instructions.md  07-vm-architecture.md  ECL-info.md  README.md
research/files/: .gitignore
research/funcs/: .gitignore  README.md  apply_th16_thredata_bulk_names.py  build_worklist.py  dump_funcs.py  import_th_re_data.py  mainmenu-plan.md  unexplored.md
research/msg/: 01-architecture-overview.md  02-msg-vm-opcodes.md  03-dialogue-lifecycle.md  04-ending-staff-msg-instruction-set.md  README.md
research/shared/: README.md  ghidra-mcp-tools.md  th16-archive-thai-lzss.md  th16-engine-math.md  th16-main-loop.md  touhou-modding-sources.md
research/sht/: .gitignore  README.md
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: ecl-skill-template.md
src-tauri/src/: app_state.rs  config.rs  lib.rs  main.rs  utils.rs
src-tauri/src/common/: cmd_runner.rs  file_watcher.rs  fs_ops.rs  fs_utils.rs  mcp_config.rs  mod.rs  project_config.rs  pty.rs  system_clipboard.rs  terminal.rs  toolchain.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/ecl/: ai_pack.rs  commands.rs  compiler.rs  error_parser.rs  map_parser.rs  mod.rs
src-tauri/src/modules/mcp/: server.rs  tools.rs
src/api/: index.js
src/composables/: useBeforeUnloadGuard.js  useContextMenu.js  useEclSemanticVocabulary.js  useEditorActionBridge.js  useFileOperations.js  useFileTreeActions.js  useFileTreeDnD.js  useFileWatcher.js  useMcpBridge.js  useResizable.js  useTheclActions.js  useWorkbenchSession.js  useWorkbenchShortcuts.js
src/stores/: buildDialog.js  editor.js  explorerClipboard.js  explorerView.js  project.js  terminal.js  toolchainSettings.js  workbenchPanels.js  (+1 more)
tools/: st01.decl  th20.eclm
(+90 files in other folders)
