[package]
name = "thtk-studio"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "thtk_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

encoding_rs = "0.8" # 处理 Shift-JIS
anyhow = "1.0"      # 优雅的错误处理
ignore = "0.4"      # 用于递归扫描文件树 (类似 .gitignore 规则)
walkdir = "2"       # 基础的文件遍历
directories = "5.0" # 获取系统配置目录

regex = "1"        # 正则表达式处理
notify = "7"       # 文件系统变更监听
notify-debouncer-mini = "0.5" # 防抖，避免重复事件
